Bug 438525 - Buttons in the Sensor Details tab are styled in weird ways.
Summary: Buttons in the Sensor Details tab are styled in weird ways.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.22.0
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-06-12 23:16 UTC by Laura David Hurka
Modified: 2021-10-02 11:35 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.85
Sentry Crash Report:


Attachments
No hover decoration on buttons. (46.27 KB, image/png)
2021-06-12 23:18 UTC, Laura David Hurka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Laura David Hurka 2021-06-12 23:16:16 UTC
SUMMARY
As seen in https://bugsfiles.kde.org/attachment.cgi?id=139270 the default colors are nearly invisible.

But it is almost impossible to figure out how to configure the color of a sensor. The sensors can be rearranged in the configuration dialog, but there isn’t any hover or focus highlight anywhere. The red cross of the delete button also doesn’t have any hover decoration, it only changes its gamma a little bit. The color button doesn’t even do that. In addition, this button is really tiny.

This user interface is kind of button-in-button (in-graphics-area), which seems not correct to me. Traditionally, there was a KEditListWidget-like interface, where every possible user interaction is pretty clear.

STEPS TO REPRODUCE
1. Open configuration dialog, page Sensor Details.
2. Move the mouse cursor over the sensors.

OBSERVED RESULT
Nothing.

EXPECTED RESULT
Button frames appear (auto raise), focus aura, or anything.

SOFTWARE/OS VERSIONS
System monitor Sensor 1.0
Operating System: KDE neon 5.22
KDE Plasma Version: 5.22.0
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.3
Comment 1 Laura David Hurka 2021-06-12 23:18:16 UTC
Created attachment 139271 [details]
No hover decoration on buttons.

My attachment was lost when submitting the bug. Now I created a new screenshot, and realized that color buttons which contain a non-default color have a permanent hover decoration.
Comment 2 David Redondo 2021-06-14 11:47:33 UTC
There's something weird going on your system, here both buttons have working hover decorations (that do not stay around on edited items) and look different than in your screenshot.
Comment 3 Nate Graham 2021-06-15 20:37:54 UTC
Looks different in 5.22 to me too...
Comment 4 Laura David Hurka 2021-06-16 10:46:47 UTC
I realize that Fusion widget style has no hover glow. But it does have auto-raise, which is missing here.

If I change the widget style to one with glow, like Breeze or Oxygen, I get auto-raise on the color button instead. The outer buttons still have not any hover or focus indication, and the color buttons stay tiny.
Comment 5 David Redondo 2021-07-07 14:13:12 UTC
No hover behavior is a qqc2-desktop-style bug most likely since the toolbar buttons also do not have it.

> color buttons which contain a non-default color have a permanent hover decoration.
 I cannot reproduce this though

I plan to make the color buttons not flat though since it's not obvious that you can interact with it
Comment 6 Bug Janitor Service 2021-07-07 22:03:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/79
Comment 7 Noah Davis 2021-07-09 02:39:20 UTC
Git commit 9d0a282abd005d4fbf541255c09f9a0972b92bad by Noah Davis.
Committed on 07/07/2021 at 22:01.
Pushed by ndavis into branch 'master'.

Use flat instead of raised for flat buttons and toolbuttons

Using raised to detect when to show graphics for autoRaise-styled
toolbuttons doesn't work with the Fusion QStyle.
FIXED-IN: 5.85

M  +3    -3    org.kde.desktop/Button.qml
M  +3    -2    org.kde.desktop/ToolButton.qml
M  +6    -6    plugin/kquickstyleitem.cpp
M  +14   -0    plugin/kquickstyleitem_p.h

https://invent.kde.org/frameworks/qqc2-desktop-style/commit/9d0a282abd005d4fbf541255c09f9a0972b92bad
Comment 8 Patrick Silva 2021-10-02 11:35:53 UTC
I can reproduce this bug again on Plasma 5.23 beta.
Nothing happens when I hover over sensors in Sensors Details section
of the widget settings.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Graphics Platform: Wayland