Use flat instead of raised for flat buttons and toolbuttons

Using raised to detect when to show graphics for autoRaise-styled
toolbuttons doesn't work with the Fusion QStyle.

BUG: 438525
FIXED-IN: 5.85